--- a/html/payment.html
+++ b/html/payment.html
@@ -19,7 +19,7 @@
         <div class="nav1">
             <nav>
                 <ul>
-                    <li><a href="homewithacc.html"><i class="fa-solid fa-house fa-fade"></i> ទំព័រដើម</a></li>
+                    <li><a href="home.html"><i class="fa-solid fa-house fa-fade"></i> ទំព័រដើម</a></li>
                     <li><a href="គម្រោងការងារ.html"><i class="fa-solid fa-credit-card  fa-fade"></i> គម្រោងការជាវ</a></li>
                     <li><a href="Movie.html"><i class="fa-solid fa-video  fa-fade"></i> ភាគយន្ត</a></li>
                     <li><a href="Coming soon.html"><i class="fa-solid fa-film  fa-fade"></i> ឆាប់ៗនេះ</a></li>
@@ -130,7 +130,7 @@
 
     <div class="footer-column">
       <h4>Quick link</h4>
-        <p><a href="homewithacc.html">ទំព័រដើម</a></p>
+        <p><a href="homew.html">ទំព័រដើម</a></p>
         <p><a href="Movie.html">ភាគយន្ត</a></p>
         <p><a href="Coming soon.html">ឆាប់ៗនេះ</a></p>
       </ul>
