--- a/html/home.html
+++ b/html/home.html
@@ -258,7 +258,7 @@
 
     <div class="footer-column">
       <h4>Quick link</h4>
-        <p><a href="homewithacc.html">ទំព័រដើម</a></p>
+        <p><a href="home.html">ទំព័រដើម</a></p>
         <p><a href="Movie.html">ភាគយន្ត</a></p>
         <p><a href="Coming soon.html">ឆាប់ៗនេះ</a></p>
       </ul>
