--- a/html/payment.html
+++ b/html/payment.html
@@ -130,7 +130,7 @@
 
     <div class="footer-column">
       <h4>Quick link</h4>
-        <p><a href="homew.html">ទំព័រដើម</a></p>
+        <p><a href="home.html">ទំព័រដើម</a></p>
         <p><a href="Movie.html">ភាគយន្ត</a></p>
         <p><a href="Coming soon.html">ឆាប់ៗនេះ</a></p>
       </ul>
